--- a/CoreData/Agility.CoreData.WebAPI/packages.config
+++ b/CoreData/Agility.CoreData.WebAPI/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
   <package id="Swashbuckle" version="5.3.1" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.3.1" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net461" />
-  <package id="WebActivatorEx" version="2.0.6" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="4.1.1" targetFramework="net461" />
+  <package id="Unity.AspNet.WebApi" version="5.10.0" targetFramework="net461" />
+  <package id="Unity.Container" version="5.10.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
