--- a/CoreData/Agility.CoreData.WebAPI/Web.config
+++ b/CoreData/Agility.CoreData.WebAPI/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
 
-    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=CoreData;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=CoreData;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings></appSettings>
