--- a/CoreData/Agility.CoreData.WebAPI/Agility.CoreData.WebAPI.csproj
+++ b/CoreData/Agility.CoreData.WebAPI/Agility.CoreData.WebAPI.csproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\api-agility - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
